# lightstar_crud

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  ruff.toml  startup.sh
migrations/: env.py
migrations/versions/: 2025-04-16_user_9ffc26514e84.py
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  user.py
src/app/adapters/: database_pg.py
src/app/models/: user.py
src/app/schemas/: __init__.py  user.py
src/config/: config.py
src/repository/: __init__.py  user.py
src/services/: __init__.py  user.py
src/utils/: __init__.py  password_manager.py
src/utils/schemas/: types.py
