[tool.poetry]
name = "test-lightstar-crud"
version = "0.1.0"
description = ""
authors = ["Korney <korneyburau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
litestar = {extras = ["sqlalchemy", "standard"], version = "^2.15.2"}
litestar-granian = "^0.12.2"
litestar-asyncpg = "^0.3.0"
msgspec = "^0.19.0"
pydantic-settings = "^2.8.1"
advanced-alchemy = "^1.1.1"
mypy-extensions = "^1.0.0"
bcrypt = "^4.3.0"



[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = '3.12'
strict = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
no_implicit_optional = true
ignore_missing_imports = true
disallow_subclassing_any = false
exclude = [
    '^setup\.py$',
    '^venv/',
    '^.venv/',
    '^test+\.py$',
    '^conftest\.py$',
    '^tests/',
    '^migrations/',
    '.*tmp.*\.py$',
]

